--- a/apps/ui/src/components/color/color.stories.mdx
+++ b/apps/ui/src/components/color/color.stories.mdx
@@ -13,283 +13,283 @@ Here's the list of variables available for customization:
 
 <ColorPalette>
   <ColorItem
-    title="color-background"
+    title="background"
     colors={{
-      DEFAULT: "var(--color-background)",
-      body: "var(--color-background-body)",
-      overlay: "var(--color-background-overlay)",
-      strong: "var(--color-background-strong)",
-      stronger: "var(--color-background-stronger)",
-      strongest: "var(--color-background-strongest)",
-      weak: "var(--color-background-weak)",
+      DEFAULT: "var(--background)",
+      body: "var(--background-body)",
+      overlay: "var(--background-overlay)",
+      strong: "var(--background-strong)",
+      stronger: "var(--background-stronger)",
+      strongest: "var(--background-strongest)",
+      weak: "var(--background-weak)",
     }}
   />
   <ColorItem
-    title="background-destructive-color-background"
+    title="background-destructive-background"
     colors={{
-      DEFAULT: "var(--color-background-destructive)",
-      strong: "var(--color-background-destructive-strong)",
-      stronger: "var(--color-background-destructive-stronger)",
-      strongest: "var(--color-background-destructive-strongest)",
-      weak: "var(--color-background-destructive-weak)",
-      weaker: "var(--color-background-destructive-weaker)",
-      weakest: "var(--color-background-destructive-weakest)",
+      DEFAULT: "var(--background-destructive)",
+      strong: "var(--background-destructive-strong)",
+      stronger: "var(--background-destructive-stronger)",
+      strongest: "var(--background-destructive-strongest)",
+      weak: "var(--background-destructive-weak)",
+      weaker: "var(--background-destructive-weaker)",
+      weakest: "var(--background-destructive-weakest)",
     }}
   />
   <ColorItem
-    title="background-error-color-background"
+    title="background-error-background"
     colors={{
-      DEFAULT: "var(--color-background-error)",
-      strong: "var(--color-background-error-strong)",
-      stronger: "var(--color-background-error-stronger)",
-      strongest: "var(--color-background-error-strongest)",
-      weakest: "var(--color-background-error-weakest)",
+      DEFAULT: "var(--background-error)",
+      strong: "var(--background-error-strong)",
+      stronger: "var(--background-error-stronger)",
+      strongest: "var(--background-error-strongest)",
+      weakest: "var(--background-error-weakest)",
     }}
   />
   <ColorItem
-    title="color-background-info"
+    title="background-info"
     colors={{
-      DEFAULT: "var(--color-background-info)",
-      weakest: "var(--color-background-info-weakest)",
+      DEFAULT: "var(--background-info)",
+      weakest: "var(--background-info-weakest)",
     }}
   />
   <ColorItem
-    title="color-background-body-inverse"
+    title="background-body-inverse"
     colors={{
-      DEFAULT: "var(--color-background-body-inverse)",
+      DEFAULT: "var(--background-body-inverse)",
     }}
   />
   <ColorItem
-    title="color-background-inverse"
+    title="background-inverse"
     colors={{
-      DEFAULT: "var(--color-background-inverse)",
-      strong: "var(--color-background-inverse-strong)",
-      stronger: "var(--color-background-inverse-stronger)",
+      DEFAULT: "var(--background-inverse)",
+      strong: "var(--background-inverse-strong)",
+      stronger: "var(--background-inverse-stronger)",
     }}
   />
   <ColorItem
-    title="color-background-primary"
+    title="background-primary"
     colors={{
-      DEFAULT: "var(--color-background-primary)",
-      strong: "var(--color-background-primary-strong)",
-      stronger: "var(--color-background-primary-stronger)",
-      strongest: "var(--color-background-primary-strongest)",
-      weak: "var(--color-background-primary-weak)",
-      weaker: "var(--color-background-primary-weaker)",
-      weakest: "var(--color-background-primary-weakest)",
+      DEFAULT: "var(--background-primary)",
+      strong: "var(--background-primary-strong)",
+      stronger: "var(--background-primary-stronger)",
+      strongest: "var(--background-primary-strongest)",
+      weak: "var(--background-primary-weak)",
+      weaker: "var(--background-primary-weaker)",
+      weakest: "var(--background-primary-weakest)",
     }}
   />
   <ColorItem
-    title="color-background-success"
+    title="background-success"
     colors={{
-      DEFAULT: "var(--color-background-success)",
-      weakest: "var(--color-background-success-weakest)",
+      DEFAULT: "var(--background-success)",
+      weakest: "var(--background-success-weakest)",
     }}
   />
   <ColorItem
-    title="color-background-warning"
+    title="background-warning"
     colors={{
-      DEFAULT: "var(--color-background-warning)",
-      weakest: "var(--color-background-warning-weakest)",
+      DEFAULT: "var(--background-warning)",
+      weakest: "var(--background-warning-weakest)",
     }}
   />
   <ColorItem
-    title="color-border"
+    title="border"
     colors={{
-      DEFAULT: "var(--color-border)",
-      strong: "var(--color-border-strong)",
-      weak: "var(--color-border-weak)",
-      weaker: "var(--color-border-weaker)",
-      weakest: "var(--color-border-weakest)",
+      DEFAULT: "var(--border)",
+      strong: "var(--border-strong)",
+      weak: "var(--border-weak)",
+      weaker: "var(--border-weaker)",
+      weakest: "var(--border-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-destructive"
+    title="border-destructive"
     colors={{
-      DEFAULT: "var(--color-border-destructive)",
-      strong: "var(--color-border-destructive-strong)",
-      stronger: "var(--color-border-destructive-stronger)",
-      strongest: "var(--color-border-destructive-strongest)",
-      weak: "var(--color-border-destructive-weak)",
-      weaker: "var(--color-border-destructive-weaker)",
-      weakest: "var(--color-border-destructive-weakest)",
+      DEFAULT: "var(--border-destructive)",
+      strong: "var(--border-destructive-strong)",
+      stronger: "var(--border-destructive-stronger)",
+      strongest: "var(--border-destructive-strongest)",
+      weak: "var(--border-destructive-weak)",
+      weaker: "var(--border-destructive-weaker)",
+      weakest: "var(--border-destructive-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-error"
+    title="border-error"
     colors={{
-      DEFAULT: "var(--color-border-error)",
-      strong: "var(--color-border-error-strong)",
-      stronger: "var(--color-border-error-stronger)",
-      strongest: "var(--color-border-error-strongest)",
-      weak: "var(--color-border-error-weak)",
-      weaker: "var(--color-border-error-weaker)",
-      weakest: "var(--color-border-error-weakest)",
+      DEFAULT: "var(--border-error)",
+      strong: "var(--border-error-strong)",
+      stronger: "var(--border-error-stronger)",
+      strongest: "var(--border-error-strongest)",
+      weak: "var(--border-error-weak)",
+      weaker: "var(--border-error-weaker)",
+      weakest: "var(--border-error-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-info"
+    title="border-info"
     colors={{
-      DEFAULT: "var(--color-border-info)",
-      weak: "var(--color-border-info-weak)",
-      weaker: "var(--color-border-info-weaker)",
-      weakest: "var(--color-border-info-weakest)",
+      DEFAULT: "var(--border-info)",
+      weak: "var(--border-info-weak)",
+      weaker: "var(--border-info-weaker)",
+      weakest: "var(--border-info-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-inverse"
+    title="border-inverse"
     colors={{
-      DEFAULT: "var(--color-border-inverse)",
-      strong: "var(--color-border-inverse-strong)",
-      stronger: "var(--color-border-inverse-stronger)",
-      strongest: "var(--color-border-inverse-strongest)",
-      weaker: "var(--color-border-inverse-weaker)",
-      weakest: "var(--color-border-inverse-weakest)",
+      DEFAULT: "var(--border-inverse)",
+      strong: "var(--border-inverse-strong)",
+      stronger: "var(--border-inverse-stronger)",
+      strongest: "var(--border-inverse-strongest)",
+      weaker: "var(--border-inverse-weaker)",
+      weakest: "var(--border-inverse-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-primary"
+    title="border-primary"
     colors={{
-      DEFAULT: "var(--color-border-primary)",
-      strong: "var(--color-border-primary-strong)",
-      stronger: "var(--color-border-primary-stronger)",
-      strongest: "var(--color-border-primary-strongest)",
-      weak: "var(--color-border-primary-weak)",
-      weaker: "var(--color-border-primary-weaker)",
-      weakest: "var(--color-border-primary-weakest)",
+      DEFAULT: "var(--border-primary)",
+      strong: "var(--border-primary-strong)",
+      stronger: "var(--border-primary-stronger)",
+      strongest: "var(--border-primary-strongest)",
+      weak: "var(--border-primary-weak)",
+      weaker: "var(--border-primary-weaker)",
+      weakest: "var(--border-primary-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-success"
+    title="border-success"
     colors={{
-      DEFAULT: "var(--color-border-success)",
-      weak: "var(--color-border-success-weak)",
-      weaker: "var(--color-border-success-weaker)",
-      weakest: "var(--color-border-success-weakest)",
+      DEFAULT: "var(--border-success)",
+      weak: "var(--border-success-weak)",
+      weaker: "var(--border-success-weaker)",
+      weakest: "var(--border-success-weakest)",
     }}
   />
   <ColorItem
-    title="color-border-warning"
+    title="border-warning"
     colors={{
-      DEFAULT: "var(--color-border-warning)",
-      weak: "var(--color-border-warning-weak)",
-      weaker: "var(--color-border-warning-weaker)",
-      weakest: "var(--color-border-warning-weakest)",
+      DEFAULT: "var(--border-warning)",
+      weak: "var(--border-warning-weak)",
+      weaker: "var(--border-warning-weaker)",
+      weakest: "var(--border-warning-weakest)",
     }}
   />
   <ColorItem
-    title="color-data-visualization"
+    title="data-visualization"
     colors={{
-      DEFAULT: "var(--color-data-visualization-1)",
-      2: "var(--color-data-visualization-2)",
-      3: "var(--color-data-visualization-3)",
-      4: "var(--color-data-visualization-4)",
-      5: "var(--color-data-visualization-5)",
-      6: "var(--color-data-visualization-6)",
-      7: "var(--color-data-visualization-7)",
-      8: "var(--color-data-visualization-8)",
-      9: "var(--color-data-visualization-9)",
-      10: "var(--color-data-visualization-10)",
+      DEFAULT: "var(--data-visualization-1)",
+      2: "var(--data-visualization-2)",
+      3: "var(--data-visualization-3)",
+      4: "var(--data-visualization-4)",
+      5: "var(--data-visualization-5)",
+      6: "var(--data-visualization-6)",
+      7: "var(--data-visualization-7)",
+      8: "var(--data-visualization-8)",
+      9: "var(--data-visualization-9)",
+      10: "var(--data-visualization-10)",
     }}
   />
   <ColorItem
-    title="color-text"
+    title="text"
     colors={{
-      DEFAULT: "var(--color-text)",
-      weak: "var(--color-text-weak)",
-      weaker: "var(--color-text-weaker)",
-      weakest: "var(--color-text-weakest)",
+      DEFAULT: "var(--text)",
+      weak: "var(--text-weak)",
+      weaker: "var(--text-weaker)",
+      weakest: "var(--text-weakest)",
     }}
   />
   <ColorItem
-    title="color-text-destructive"
+    title="text-destructive"
     colors={{
-      DEFAULT: "var(--color-text-destructive)",
-      strong: "var(--color-text-destructive-strong)",
-      stronger: "var(--color-text-destructive-stronger)",
-      strongest: "var(--color-text-destructive-strongest)",
-      weak: "var(--color-text-destructive-weak)",
+      DEFAULT: "var(--text-destructive)",
+      strong: "var(--text-destructive-strong)",
+      stronger: "var(--text-destructive-stronger)",
+      strongest: "var(--text-destructive-strongest)",
+      weak: "var(--text-destructive-weak)",
     }}
   />
   <ColorItem
-    title="color-text-error"
+    title="text-error"
     colors={{
-      DEFAULT: "var(--color-text-error)",
-      strong: "var(--color-text-error-strong)",
-      stronger: "var(--color-text-error-stronger)",
-      strongest: "var(--color-text-error-strongest)",
-      weak: "var(--color-text-error-weak)",
+      DEFAULT: "var(--text-error)",
+      strong: "var(--text-error-strong)",
+      stronger: "var(--text-error-stronger)",
+      strongest: "var(--text-error-strongest)",
+      weak: "var(--text-error-weak)",
     }}
   />
   <ColorItem
-    title="color-text-icon"
+    title="text-icon"
     colors={{
-      DEFAULT: "var(--color-text-icon)",
-      error: "var(--color-text-icon-error)",
-      info: "var(--color-text-icon-info)",
-      inverse: "var(--color-text-icon-inverse)",
-      success: "var(--color-text-icon-success)",
-      warning: "var(--color-text-icon-warning)",
-      weaker: "var(--color-text-icon-weaker)",
+      DEFAULT: "var(--text-icon)",
+      error: "var(--text-icon-error)",
+      info: "var(--text-icon-info)",
+      inverse: "var(--text-icon-inverse)",
+      success: "var(--text-icon-success)",
+      warning: "var(--text-icon-warning)",
+      weaker: "var(--text-icon-weaker)",
     }}
   />
   <ColorItem
-    title="color-text-info"
+    title="text-info"
     colors={{
-      DEFAULT: "var(--color-text-info)",
-      strong: "var(--color-text-info-strong)",
+      DEFAULT: "var(--text-info)",
+      strong: "var(--text-info-strong)",
     }}
   />
   <ColorItem
-    title="color-text-inverse"
+    title="text-inverse"
     colors={{
-      DEFAULT: "var(--color-text-inverse)",
-      weak: "var(--color-text-inverse-weak)",
-      weaker: "var(--color-text-inverse-weaker)",
-      weakest: "var(--color-text-inverse-weakest)",
+      DEFAULT: "var(--text-inverse)",
+      weak: "var(--text-inverse-weak)",
+      weaker: "var(--text-inverse-weaker)",
+      weakest: "var(--text-inverse-weakest)",
     }}
   />
   <ColorItem
-    title="color-text-link"
+    title="text-link"
     colors={{
-      DEFAULT: "var(--color-text-link)",
-      strong: "var(--color-text-link-strong)",
-      stronger: "var(--color-text-link-stronger)",
-      strongest: "var(--color-text-link-strongest)",
-      weak: "var(--color-text-link-weak)",
+      DEFAULT: "var(--text-link)",
+      strong: "var(--text-link-strong)",
+      stronger: "var(--text-link-stronger)",
+      strongest: "var(--text-link-strongest)",
+      weak: "var(--text-link-weak)",
     }}
   />
   <ColorItem
-    title="color-text-link-destructive"
+    title="text-link-destructive"
     colors={{
-      DEFAULT: "var(--color-text-link-destructive)",
-      strong: "var(--color-text-link-destructive-strong)",
-      stronger: "var(--color-text-link-destructive-stronger)",
-      strongest: "var(--color-text-link-destructive-strongest)",
-      weak: "var(--color-text-link-destructive-weak)",
+      DEFAULT: "var(--text-link-destructive)",
+      strong: "var(--text-link-destructive-strong)",
+      stronger: "var(--text-link-destructive-stronger)",
+      strongest: "var(--text-link-destructive-strongest)",
+      weak: "var(--text-link-destructive-weak)",
     }}
   />
   <ColorItem
-    title="color-text-primary"
+    title="text-primary"
     colors={{
-      DEFAULT: "var(--color-text-primary)",
-      strong: "var(--color-text-primary-strong)",
-      stronger: "var(--color-text-primary-stronger)",
-      strongest: "var(--color-text-primary-strongest)",
-      weak: "var(--color-text-primary-weak)",
+      DEFAULT: "var(--text-primary)",
+      strong: "var(--text-primary-strong)",
+      stronger: "var(--text-primary-stronger)",
+      strongest: "var(--text-primary-strongest)",
+      weak: "var(--text-primary-weak)",
     }}
   />
   <ColorItem
-    title="color-text-success"
+    title="text-success"
     colors={{
-      DEFAULT: "var(--color-text-success)",
+      DEFAULT: "var(--text-success)",
     }}
   />
   <ColorItem
-    title="color-text-warning"
+    title="text-warning"
     colors={{
-      DEFAULT: "var(--color-text-warning)",
-      strong: "var(--color-text-warning-strong)",
+      DEFAULT: "var(--text-warning)",
+      strong: "var(--text-warning-strong)",
     }}
   />
 </ColorPalette>
