chore: refactor colors

--- a/apps/ui/src/components/color/color.stories.mdx
+++ b/apps/ui/src/components/color/color.stories.mdx
@@ -25,7 +25,7 @@ Here's the list of variables available for customization:
     }}
   />
   <ColorItem
-    title="background-destructive-background"
+    title="background-destructive"
     colors={{
       DEFAULT: "var(--background-destructive)",
       strong: "var(--background-destructive-strong)",
@@ -37,7 +37,7 @@ Here's the list of variables available for customization:
     }}
   />
   <ColorItem
-    title="background-error-background"
+    title="background-error"
     colors={{
       DEFAULT: "var(--background-error)",
       strong: "var(--background-error-strong)",
